--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
   --primary: #BB86FC;
   --primary-variant: #3700B3;
   --secondary: #03DAC6;
@@ -289,4 +289,4 @@ main {
   .notes-list {
     grid-template-columns: repeat(4, 1fr);
   }
-}
+} */
